# android-glass-to-glass-latency

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  clock.cpp  pixeltorch.cpp
app/src/main/java/de/inovex/latencytest/: AtomicLatchAndValue.java  BWFlip.java  Camera.java  CameraToDisplay.java  Clock.java  FlashToggleSpeed.java  FlashToggleSpeedFaster.java  FrameRater.java  JPEGSnapshot.java  MainActivity.java  MilliSecondsClock.java  PixelTorch.java  SensorSyncer.java  Utils.java
app/src/main/res/layout/: activity_bwflip.xml  activity_camera_to_display_imagereader.xml  activity_camera_to_display_surfaceview.xml  activity_camera_to_display_textureview.xml  activity_flash_toogle_speed.xml  activity_jpeg_snapshot.xml  activity_main.xml  activity_milli_seconds_clock.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
pixeltorch/: .clang-format  CMakeLists.txt  Makefile  README.md  flasher.c  libpixeltorch.c
pixeltorch/includes/pixeltorch/: pixeltorch.h
pixeltorch/msm8998-kernel-headers/: README.md  msm_cam_sensor.h  msm_camsensor_sdk.h
pixeltorch/msm8998-kernel-headers/original/: msm_cam_sensor.h
